# RenderStar

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RenderStar.sln  RenderStar.vcxproj  RenderStar.vcxproj.filters  mapbin_format_spec.txt  uibin_format_spec.txt
CMake/: Dependencies.cmake
Client/: CMakeLists.txt
Client/Header/RenderStar/Client/: ClientApplication.hpp  ForwardedTypes.hpp
Client/Header/RenderStar/Client/Core/: ClientLifecycleModule.hpp  ClientSceneModule.hpp  ClientWindowModule.hpp
Client/Header/RenderStar/Client/Gameplay/: ClientPlayerModule.hpp  PlayerController.hpp  PlayerControllerAffector.hpp
Client/Header/RenderStar/Client/Input/: ClientInputModule.hpp  KeyCode.hpp  KeyModifier.hpp  KeyState.hpp  MouseCode.hpp  MouseState.hpp
Client/Header/RenderStar/Client/Network/: ClientNetworkModule.hpp  ConnectionState.hpp
Client/Header/RenderStar/Client/Render/: RendererModule.hpp
Client/Header/RenderStar/Client/UI/: FontAtlas.hpp  UIElement.hpp  UIStackModule.hpp  UIUniformData.hpp  UIVertex.hpp  UibinComponents.hpp  UibinLoader.hpp  UibinScene.hpp  UibinTypes.hpp
Client/Source/RenderStar/Client/: ClientApplication.cpp  Main.cpp
Client/Source/RenderStar/Client/Core/: ClientLifecycleModule.cpp  ClientSceneModule.cpp  ClientWindowModule.cpp
Client/Source/RenderStar/Client/Event/: ClientEventBuses.cpp
Client/Source/RenderStar/Client/Gameplay/: ClientPlayerModule.cpp  PlayerControllerAffector.cpp
Client/Source/RenderStar/Client/Input/: ClientInputModule.cpp
Client/Source/RenderStar/Client/Network/: ClientNetworkModule.cpp
Client/Source/RenderStar/Client/Render/: RendererModule.cpp
Client/Source/RenderStar/Client/UI/: FontAtlas.cpp  UIStackModule.cpp  UIVertex.cpp  UibinLoader.cpp
Common/: CMakeLists.txt
Common/Header/RenderStar/Common/: ForwardedTypes.hpp
Common/Header/RenderStar/Common/Asset/: AssetCache.hpp  AssetHandle.hpp  AssetLocation.hpp  AssetModule.hpp  BinaryAsset.hpp  BinaryAssetLoader.hpp  FilesystemAssetProvider.hpp  IAsset.hpp  IAssetLoader.hpp  IAssetProvider.hpp  IBinaryAsset.hpp  ITextAsset.hpp  TextAsset.hpp  TextAssetLoader.hpp
Common/Header/RenderStar/Common/Component/: AbstractAffector.hpp  AuthorityContext.hpp  ComponentModule.hpp  ComponentModule.inl  ComponentPool.hpp  ComponentView.hpp  EntityAuthority.hpp  GameObject.hpp  IComponentPool.hpp  IComponentSystem.hpp
Common/Header/RenderStar/Common/Configuration/: Configuration.hpp  ConfigurationFactory.hpp  ConfigurationModule.hpp  EmptyConfiguration.hpp  IConfiguration.hpp
Common/Header/RenderStar/Common/Event/: AbstractEventBus.hpp  AbstractEventBus.inl  EventPriority.hpp  EventResult.hpp  HandlerPriority.hpp  IEvent.hpp  IEventBus.hpp
Common/Header/RenderStar/Common/Module/: AbstractModule.hpp  AbstractModule.inl  IModule.hpp  ModuleContext.hpp  ModuleContext.inl  ModuleManager.hpp  ModuleManager.inl
Common/Header/RenderStar/Common/Network/: IPacket.hpp  PacketBuffer.hpp  PacketModule.hpp  PacketModule.inl  ServerMode.hpp
Common/Header/RenderStar/Common/Physics/: MovementModel.hpp  PhysicsModule.hpp
Common/Header/RenderStar/Common/Scene/: ComponentSerializer.hpp  ComponentSerializerRegistry.hpp  ComponentSerializerRegistry.inl  EntityIdRemapper.hpp  MapbinLoader.hpp  SceneDescriptor.hpp  SceneEvents.hpp  SceneModule.hpp  SceneModule.inl  SerializableComponent.hpp
Common/Header/RenderStar/Common/Time/: TimeModule.hpp
Common/Header/RenderStar/Common/Utility/: ResourcePath.hpp  TypeName.hpp
Common/Source/RenderStar/Common/Asset/: AssetCache.cpp  AssetLocation.cpp  AssetModule.cpp  BinaryAsset.cpp  BinaryAssetLoader.cpp  FilesystemAssetProvider.cpp  TextAsset.cpp  TextAssetLoader.cpp
Common/Source/RenderStar/Common/Component/: ComponentModule.cpp
Common/Source/RenderStar/Common/Configuration/: Configuration.cpp  ConfigurationFactory.cpp  ConfigurationModule.cpp
Common/Source/RenderStar/Common/Event/: AbstractEventBus.cpp
Common/Source/RenderStar/Common/Module/: AbstractModule.cpp  ModuleContext.cpp  ModuleManager.cpp
Common/Source/RenderStar/Common/Network/: PacketBuffer.cpp  PacketModule.cpp
Common/Source/RenderStar/Common/Physics/: PhysicsModule.cpp
Common/Source/RenderStar/Common/Scene/: ComponentSerializerRegistry.cpp  MapbinLoader.cpp  SceneModule.cpp
Common/Source/RenderStar/Common/Time/: TimeModule.cpp
Server/: CMakeLists.txt
Server/Header/RenderStar/Server/: ForwardedTypes.hpp  ServerApplication.hpp
Server/Header/RenderStar/Server/Core/: ServerLifecycleModule.hpp  ServerPlayerModule.hpp  ServerSceneModule.hpp
Server/Header/RenderStar/Server/Network/: ClientConnection.hpp  ServerMode.hpp  ServerNetworkModule.hpp
Server/Header/RenderStar/Server/Physics/: ServerPhysicsModule.hpp
Server/Source/RenderStar/Server/: Main.cpp  ServerApplication.cpp
Server/Source/RenderStar/Server/Core/: ServerLifecycleModule.cpp  ServerPlayerModule.cpp  ServerSceneModule.cpp
Server/Source/RenderStar/Server/Network/: ClientConnection.cpp  ServerNetworkModule.cpp
Server/Source/RenderStar/Server/Physics/: ServerPhysicsModule.cpp
Tests/: CMakeLists.txt
Tests/Source/: AbstractAffectorTest.cpp  AssetCacheTest.cpp  AssetHandleTest.cpp  AssetLocationTest.cpp  AuthorityChangePacketTest.cpp  BackendCapabilitiesTest.cpp  BinaryAssetTest.cpp  CameraTest.cpp  ClientEventsTest.cpp  ComponentModuleAuthorityTest.cpp  ComponentModuleTest.cpp  ComponentPoolTest.cpp  ComponentSerializerRegistryTest.cpp  ComponentUpdatePacketTest.cpp  ComponentViewTest.cpp  ConfigurationTest.cpp  ConnectionStateTest.cpp  EntityAuthorityTest.cpp  EntityIdRemapperTest.cpp  EventBusTest.cpp  EventResultTest.cpp  GameObjectTest.cpp  GlslTransformerTest.cpp  GlslVersionTest.cpp  HierarchyTest.cpp  KeyModifierTest.cpp  LightComponentTest.cpp  LitVertexTest.cpp  MapbinLoaderTest.cpp  MapbinLoaderV3Test.cpp  MapbinLoaderV5Test.cpp  MaterialPropertiesTest.cpp  ModuleManagerTest.cpp  NetworkingTest.cpp  PacketBufferTest.cpp  PacketModuleTest.cpp  PipelineStageTest.cpp  PlayerControllerTest.cpp  RenderTargetDescriptionTest.cpp  ResourcePathTest.cpp  (+16 more)
(+292 files in other folders)
